# SFML3-Test-CXX23Modules

./: .gitignore  CMakeLists.txt  Core-concepts.cppm  Core.cpp  Core.cppm  LICENSE  Makefile  Makefile-0721  README.md  main.cpp  sfml.cppm
.github/workflows/: archlinux.yml  ci.yml  macos.yml  ubuntu.yml  windows.yml
modules/core/: core-concepts.cppm  core-coroutines.cppm  core-math.cppm  core-ui.cppm  core-utils.cppm  core.cppm
modules/sfml/: sfml.cppm
src/: main.cpp
src/core/: core-utils.cpp  core.cpp
